--- a/Services/Loadbalancer.yaml
+++ b/Services/Loadbalancer.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeport-service
+  name: loadbalancer-service
 spec: 
-  type: NodePort
+  type: LoadBalancer
   ports: 
     -  targetPort: 80
        port: 80
        nodePort: 30006
-  selector:
-    app: nginx
