--- a/Services/clusterIP.yaml
+++ b/Services/clusterIP.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeport-service
+  name: clusterip-service
 spec: 
-  type: NodePort
+  type: ClusterIP
   ports: 
     -  targetPort: 80
        port: 80
-       nodePort: 30006
   selector:
     app: nginx
+    type: frontend
